# goit-pythonweb-hw-03

./: Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml
storage/: data.json
templates/: base.html  error.html  index.html  message.html  read.html
