[tool.poetry]
name = "goit-pythonweb-hw-03"
version = "0.1.0"
description = "Web application with message board functionality"
authors = ["Your Name <your.email@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"
flask = "^3.0.2"
werkzeug = "^3.0.1"
jinja2 = "^3.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 